Arreglos de interfaz, correciones de tipografía, agregue iconos, rutas e imagenes

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   --color-white: #FFFFFF;
   --color-texto-violeta: #7334AF;
 
+
+  --font-family-franklin: 'Libre Franklin', sans-serif;
+ 
 }
 
 @font-face {
